--- a/styles/main_v2.css
+++ b/styles/main_v2.css
@@ -460,24 +460,25 @@ text-size-adjust: 100%;
 .helpLink {
 display:none
 }
-p{
+#operationType {
+    display: none
+}
+p {
     box-sizing: border-box;
-color: rgb(0, 28, 74);
-display: block;
-font-family: "Futura Now Text";
-font-size: 18px;
-font-weight: 400;
-
-letter-spacing: -0.2px;
-line-height: 21.6px;
-margin-block-end: 0px;
-margin-block-start: 0px;
-margin-bottom: 0px;
-margin-inline-end :px;
-margin-inline-start: 0px;
-margin-top: 0px;
-text-align: start;
-text-size-adjust: 100%;
-
--webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    color: rgb(0, 28, 74);
+    display: block;
+    font-family: "Futura Now Text";
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: -0.2px;
+    line-height: 21.6px;
+    margin-block-end: 0px;
+    margin-block-start: 0px;
+    margin-bottom: 0px;
+    margin-inline-end: px;
+    margin-inline-start: 0px;
+    margin-top: 0px;
+    text-align: start;
+    text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
